--- a/package.json
+++ b/package.json
@@ -3,18 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "babel-plugin-superjson-next": "^0.4.2",
+    "chroma-js": "^2.1.2",
+    "date-fns": "^2.25.0",
+    "leaflet": "^1.7.1",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "react-leaflet": "^3.2.2",
+    "recharts": "^2.1.6",
+    "styled-components": "^5.3.3",
+    "superjson": "^1.8.0"
   },
   "devDependencies": {
+    "@types/chroma-js": "^2.1.3",
+    "@types/leaflet": "^1.7.5",
     "@types/react": "17.0.32",
+    "@types/styled-components": "^5.1.15",
     "eslint": "8.1.0",
     "eslint-config-next": "11.1.2",
     "typescript": "4.4.4"
