--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "chroma-js": "^2.1.2",
     "date-fns": "^2.25.0",
     "leaflet": "^1.7.1",
-    "next": "11.1.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "12",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-leaflet": "^3.2.2",
     "recharts": "^2.1.6",
     "styled-components": "^5.3.3",
-    "superjson": "^1.8.0"
+    "superjson": "^1.8.0",
+    "swr": "^1.0.1"
   },
   "devDependencies": {
     "@types/chroma-js": "^2.1.3",
