--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "leaflet": "^1.7.1",
     "next": "12",
     "react": "^17.0.2",
+    "react-cool-inview": "^2.0.8",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-leaflet": "^3.2.2",
